[package]
name = "aitch"
description = "A HTTP server toolkit, loosely based on Go's net/http."
license = "MIT"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]

[dependencies]
futures = "0.1"
hyper = { git = "https://github.com/hyperium/hyper/", features = ["compat"] }
http = "*"
error-chain = "*"
