[package]
name = "aitch"
description = "A HTTP server toolkit, loosely based on Go's net/http."
license = "MIT"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]

[features]
default = ["hyper"]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
hyper = { version = "0.12", optional = true }
