[package]
name = "aitch"
description = "A HTTP server toolkit, loosely based on Go's net/http."
license = "MIT"
version = "0.1.1"
readme = "README.md"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
repository = "https://github.com/mjkillough/aitch"

[badges]
travis-ci = { repository = "https://github.com/mjkillough/aitch", branch = "master" }

[features]
default = ["json", "server-hyper", "server-tiny-http", "mime_guess"]

json = ["serde", "serde_json"]
server-hyper = ["hyper"]
server-tiny-http = ["tiny_http", "tokio-threadpool"]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
hyper = { version = "0.12", optional = true }
mime_guess = { version = "1.8.5", optional = true }
tiny_http = { version = "0.6.0", optional = true }
tokio-threadpool = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
reqwest = "0.8"
